# Agent

./: .gitignore  README.md
backend/: .env.example  Dockerfile  fly.toml  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/auth/: router.py
backend/app/chat/: agent_loop.py  llm_proxy.py  router.py  tools.py
backend/app/harnesses/: router.py
backend/app/iap/: router.py
backend/app/users/: router.py
docs/: README.md  implementation_plan.md
ios/Agent/: AgentApp.swift
ios/Agent/Core/Design/: Theme.swift
ios/Agent/Core/Design/Components/: GlassCard.swift  HarnessAvatar.swift  PulsingMicButton.swift  WaveformView.swift
ios/Agent/Core/Keychain/: KeychainManager.swift
ios/Agent/Core/Models/: Harness.swift  LLMProvider.swift  Message.swift  User.swift
ios/Agent/Core/Network/: APIClient.swift  APIConfig.swift  AuthManager.swift  Endpoints.swift
ios/Agent/Features/Auth/: AuthView.swift  AuthViewModel.swift
ios/Agent/Features/Chat/: ChatView.swift  ChatViewModel.swift  MessageBubble.swift
ios/Agent/Features/Home/: HomeView.swift  HomeViewModel.swift
ios/Agent/Features/Marketplace/: HarnessDetailView.swift  MarketplaceView.swift  MarketplaceViewModel.swift
ios/Agent/Features/Onboarding/: OnboardingView.swift
ios/Agent/Features/Settings/: SettingsView.swift
ios/Agent/Features/Voice/: VoicePipeline.swift
ios/Agent/Navigation/: AppRouter.swift
